--- a/index.html
+++ b/index.html
@@ -964,7 +964,7 @@
                     </div>
                 </div>
             </div>
-            <!--  <div class="services-container">
+            <div class="services-container">
                 <div class="services-inner-container">
                     <div class="services-heading">
                         <p class="sub-title">services</p>
@@ -1034,13 +1034,9 @@
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-
-
             </div>
-            <div class="stack-container">
+           <!---<div class="stack-container">
                 <div class="stack-inner-container">
                     <div class="stack-heading">
                         <p class="sub-title">stack</p>
