--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@
                     </div>
                 </div>
             </div>
-           <!---<div class="stack-container">
+           <div class="stack-container">
                 <div class="stack-inner-container">
                     <div class="stack-heading">
                         <p class="sub-title">stack</p>
@@ -1081,7 +1081,7 @@
                     </div>
                 </div>
             </div>
-            <div class="talent-container">
+            <!--<div class="talent-container">
                 <div class="talent-inner-container">
                     <div class="talent-text-1">
                         <p>Talent Outsourcing</p>
