--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="talent-container">
+            <div class="talent-container">
                 <div class="talent-inner-container">
                     <div class="talent-text-1">
                         <p>Talent Outsourcing</p>
@@ -1115,7 +1115,7 @@
                     </div>
                 </div>
             </div>
-            <div class="book-meeting-container">
+           <div class="book-meeting-container">
                 <div class="book-meeting-text">
                     <p>Let's get talking</p>
                 </div>
@@ -1124,7 +1124,7 @@
                 </div>
             </div>
         </section>
-      <footer>
+     <!-- <footer>
             <div class="footer-inner-container">
                 <div class="footer-logo-container">
                     <div class="logo">
